added log for connect/disconnect from server

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
 
   <body>
     <p>Welcome to the app</p>
+
+      //insert socket.io library
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      //making a request to open up the socket
+      var socket = io();
+    </script>
   </body>
 
 </html>
