--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,13 @@
 
 <head>
   <meta charset="utf-8">
-  </head>
+</head>
 
   <body>
     <p>Welcome to the app</p>
 
-      //insert socket.io library
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      //making a request to open up the socket
-      var socket = io();
-    </script>
+    <script src="/js/index.js"></script>
   </body>
 
 </html>
